src2/objects/NES_Data_Dictionary__c.object
<CustomObject>
    <description>Stores global telemetry data, used to translate codes delivered from the machines into readable information.
Three record types allow the page layouts to be tailored to show relevant fields related to Settings, Events and Notable Events.</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Specifies what Event Type belongs Every Event according Machine Team: 
Event Name	Event Type
Event Event	0
Brew History Event	1
Pump Maintenance Event	2
BU Maintenance event	3
Error Event	4
Warning Event	5
Configuration Change Event	6
Time Change Event	7
Clean Milk Event	9
Descaling Event	10
Filter Change Event	11
Rinse Coffee Event	12
Rinse Milk Event	13
Emptying Event	14</description>
        <label>Event Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Urgency__c</fullName>
        <description>Defines what modem should do with event: Log and Send, Log and Buffer, Log, Ignore.</description>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Event_Urgency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxToIoT__c</fullName>
        <formula>TEXT( NES_Max__c )</formula>
        <label>MaxToIoT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinToIoT__c</fullName>
        <formula>TEXT(  NES_Min__c )</formula>
        <label>MinToIoT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modem_Behaviour__c</fullName>
        <description>Field that defines how a Modem Setting needs to be sent to Machine</description>
        <label>Modem Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Modem_Behaviour</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Access__c</fullName>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_Access</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Data_Type__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_DataType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Default_Value__c</fullName>
        <label>Default Value</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NES_Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_Group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Label__c</fullName>
        <label>Label</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Max__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_Min__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_NameToIoT__c</fullName>
        <description>Added cuotes to avoid error sending data to IoT</description>
        <formula>&apos;&quot;&apos;+TEXT(NES_Label__c)+&apos;&quot;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameToIoT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Parameter_ID__c</fullName>
        <label>Parameter ID</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Data Dictionaries</relationshipLabel>
        <relationshipName>Data_Dictionaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_Severity__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_Event_Severity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NES_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Best_Action__c</fullName>
        <description>Next Best Action to be triggered once a Notable Event is raised</description>
        <label>Next Best Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NextBestAction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operational_Value__c</fullName>
        <label>Operational Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Down</fullName>
                </value>
                <value>
                    <fullName>Halted</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Ok</fullName>
                </value>
                <value>
                    <fullName>Reset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reset_Event__c</fullName>
        <label>Reset Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setting_Type__c</fullName>
        <description>General Counter, General Parameter,etc.</description>
        <label>Setting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SettingsGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_Notable_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if once received this event a Notable Event needs to be triggered</description>
        <label>Trigger Notable Event</label>
        <type>Checkbox</type>
    </fields>
    <label>Data Dictionary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NES_Parameter_ID__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>NES_Status__c</columns>
        <columns>Category__c</columns>
        <columns>NES_Data_Type__c</columns>
        <columns>NES_Group__c</columns>
        <columns>Trigger_Notable_Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Asset_Setting_Configuration_Values</fullName>
        <columns>NES_Parameter_ID__c</columns>
        <columns>NES_Label__c</columns>
        <columns>NES_Status__c</columns>
        <columns>Setting_Type__c</columns>
        <columns>NES_Access__c</columns>
        <columns>NES_Data_Type__c</columns>
        <columns>NES_Max__c</columns>
        <columns>NES_Min__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NES_Data_Dictionary__c.Asset_Setting_Configuration</value>
        </filters>
        <label>Asset Setting Configuration Values</label>
    </listViews>
    <listViews>
        <fullName>Capsule_Translations</fullName>
        <columns>NES_Parameter_ID__c</columns>
        <columns>NAME</columns>
        <columns>NES_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NES_Data_Dictionary__c.Machine_Translations</value>
        </filters>
        <filters>
            <field>NES_Group__c</field>
            <operation>equals</operation>
            <value>Capsule</value>
        </filters>
        <label>Machine Capsule Values</label>
    </listViews>
    <listViews>
        <fullName>Machine_BeverageTemperature_Coffee_Val</fullName>
        <columns>NES_Parameter_ID__c</columns>
        <columns>NAME</columns>
        <columns>NES_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NES_Group__c</field>
            <operation>equals</operation>
            <value>BeverageTemperature - coffee</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NES_Data_Dictionary__c.Machine_Translations</value>
        </filters>
        <label>Machine BeverageTemperature - Coffee Val</label>
    </listViews>
    <listViews>
        <fullName>Machine_BeverageTemperature_milk_Val</fullName>
        <columns>NES_Parameter_ID__c</columns>
        <columns>NAME</columns>
        <columns>NES_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NES_Group__c</field>
            <operation>equals</operation>
            <value>BeverageTemperature - milk</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NES_Data_Dictionary__c.Machine_Translations</value>
        </filters>
        <label>Machine BeverageTemperature - milk Val</label>
    </listViews>
    <listViews>
        <fullName>Machine_Event_Types</fullName>
        <columns>NES_Parameter_ID__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NES_Group__c</field>
            <operation>equals</operation>
            <value>Event</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NES_Data_Dictionary__c.Machine_Translations</value>
        </filters>
        <label>Machine Event Type Values</label>
    </listViews>
    <listViews>
        <fullName>Machine_Language_Values</fullName>
        <columns>NES_Parameter_ID__c</columns>
        <columns>NAME</columns>
        <columns>NES_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NES_Group__c</field>
            <operation>equals</operation>
            <value>Language</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NES_Data_Dictionary__c.Machine_Translations</value>
        </filters>
        <label>Machine Language Values</label>
    </listViews>
    <listViews>
        <fullName>Machine_OperationMode_Values</fullName>
        <columns>NES_Parameter_ID__c</columns>
        <columns>NAME</columns>
        <columns>NES_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NES_Group__c</field>
            <operation>equals</operation>
            <value>OperationMode</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NES_Data_Dictionary__c.Machine_Translations</value>
        </filters>
        <label>Machine OperationMode Values</label>
    </listViews>
    <listViews>
        <fullName>Machine_Recipe_values</fullName>
        <columns>NES_Parameter_ID__c</columns>
        <columns>NAME</columns>
        <columns>NES_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NES_Data_Dictionary__c.Machine_Translations</value>
        </filters>
        <filters>
            <field>NES_Group__c</field>
            <operation>equals</operation>
            <value>Recipe</value>
        </filters>
        <label>Machine Recipe Values</label>
    </listViews>
    <listViews>
        <fullName>Machine_Time_Zone_Values</fullName>
        <columns>NES_Parameter_ID__c</columns>
        <columns>NAME</columns>
        <columns>NES_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NES_Group__c</field>
            <operation>equals</operation>
            <value>TimeZone</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NES_Data_Dictionary__c.Machine_Translations</value>
        </filters>
        <label>Machine Time Zone Values</label>
    </listViews>
    <listViews>
        <fullName>Machine_Translations</fullName>
        <columns>NAME</columns>
        <columns>NES_Parameter_ID__c</columns>
        <columns>NES_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NES_Data_Dictionary__c.Machine_Translations</value>
        </filters>
        <filters>
            <field>NES_Group__c</field>
            <operation>equals</operation>
            <value>Send Raw Data</value>
        </filters>
        <label>Machine Translations</label>
    </listViews>
    <listViews>
        <fullName>Machine_WaterHardness_Values</fullName>
        <columns>NES_Parameter_ID__c</columns>
        <columns>NAME</columns>
        <columns>NES_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NES_Group__c</field>
            <operation>equals</operation>
            <value>WaterHardness</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NES_Data_Dictionary__c.Machine_Translations</value>
        </filters>
        <label>Machine WaterHardness Values</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Dictionaries</pluralLabel>
    <recordTypes>
        <fullName>Asset_Event_Configuration</fullName>
        <active>true</active>
        <description>To be able to define Events Issue List</description>
        <label>Asset Event Configuration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset_Setting_Configuration</fullName>
        <active>true</active>
        <description>To be able to translate General Parameters, General Counters, Setup Menu Data, etc.</description>
        <label>Asset Setting Configuration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Machine_Translations</fullName>
        <active>true</active>
        <description>To be able to translate Asset Codes to Functional names</description>
        <label>Asset Translations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nessoft_Translations</fullName>
        <active>true</active>
        <description>To be able to translate Functional names to Nessoft Codes</description>
        <label>Nessoft Translations</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>